Added references on CDRs and mobility analysis to the introduction.

--- a/biblio.bib
+++ b/biblio.bib
@@ -449,13 +449,6 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 }
 
 
-@inproceedings{sarraute2015socialevents,
-  title = {{Social Events in a Time-Varying Mobile Phone Graph}},
-  author = {Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Wehmut, Klaus and Ziviani, Artur and Alvarez-Hamelin, Ignacio},
-  booktitle = {Fourth International Conference on the Analysis of Mobile Phone Datasets (NetMob)},
-  year = {2015},
-}
-
 
 @article{schmunis2010chagas,
   title = {{Chagas disease: a Latin American health problem becoming a world health problem}},
@@ -522,4 +515,290 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
   title = {Analyzing the spread of {{C}}hagas disease with mobile phone data},
   booktitle = {2016 {IEEE}/{ACM} International Conference on Advances in Social Networks Analysis and Mining ({ASONAM})}
   },
+
+
+% mobile phone records and mobility
+
+@misc{netmob,
+  author = {NetMob},
+  title = {{Main conference on the scientific analysis of mobile phone datasets}},
+  url = {http://netmob.org/},
+  year = {2016},
+  note = {[Online, accessed 12-may-2016]},
+}
+
+
+@misc{d4d,
+  author = {Orange D4D},
+  title = {{Data for Development (D4D) Challenge}},
+  url = {http://www.d4d.orange.com/},
+  year = {2016},
+  note = {[Online, accessed 12-may-2016]},
+}
+
+
+@article{gonzalez2008understanding,
+  title = {{Understanding individual human mobility patterns}},
+  author = {Gonzalez, Marta C and Hidalgo, Cesar A and Barabasi, Albert-Laszlo},
+  journal = {Nature},
+  volume = {453},
+  number = {7196},
+  pages = {779--782},
+  year = {2008},
+  publisher = {Nature Publishing Group},
+}
+
+
+@inproceedings{cho2011friendship,
+  title = {{Friendship and mobility: user movement in location-based social networks}},
+  author = {Cho, Eunjoon and Myers, Seth A and Leskovec, Jure},
+  booktitle = {Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages = {1082--1090},
+  year = {2011},
+  organization = {ACM},
+}
+
+
+@article{ponieman2016mobility,
+  title = {{Mobility and sociocultural events in mobile phone data records}},
+  author = {Ponieman, Nicolas B and Sarraute, Carlos and Minnoni, Martin and Travizano, Matias and Rodriguez Zivic, Pablo and Salles, Alejo},
+  journal = {AI Communications},
+  volume = {29},
+  number = {1},
+  pages = {1--10},
+  year = {2016},
+  publisher = {IOS Press},
+}
+
+
+@inproceedings{sarraute2015socialevents,
+  title = {{Social Events in a Time-Varying Mobile Phone Graph}},
+  author = {Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Wehmut, Klaus and Ziviani, Artur and Alvarez-Hamelin, Ignacio},
+  booktitle = {Fourth International Conference on the Analysis of Mobile Phone Datasets (NetMob)},
+  year = {2015},
+}
+
+
+
+@article{de2013unique,
+  title = {{Unique in the crowd: The privacy bounds of human mobility}},
+  author = {de Montjoye, Yves-Alexandre and Hidalgo, C{\'e}sar A and Verleysen, Michel and Blondel, Vincent D},
+  journal = {Scientific reports},
+  volume = {3},
+  year = {2013},
+  publisher = {Nature Publishing Group},
+}
+
+
+
+@inproceedings{oliveira2015measurement,
+  title={Measurement-driven mobile data traffic modeling in a large metropolitan area},
+  author={Oliveira, Eduardo Mucelli Rezende and Viana, Aline Carneiro and Naveen, Kolar Purushothama and Sarraute, Carlos},
+  booktitle={Pervasive Computing and Communications (PerCom), 2015 IEEE International Conference on},
+  pages={230--235},
+  year={2015},
+  organization={IEEE}
+}
+
+
+@inproceedings{sarraute2015descubriendo,
+	year = 2015,
+	month = {Aug},
+	author = {Carlos Sarraute and Carolina Lang and Juan de Monasterio and Diego Weinberg},
+	title = {Descubriendo {{C}}hagas con Big Data},
+	booktitle = {XVII Simposio Internacional sobre Enfermedades Desatendidas},
+ 	location = {Buenos Aires, Argentina},
+},
+	
+
+@article{Ponieman2015mobility,
+	doi = {10.3233/aic-150687},
+	url = {https://doi.org/10.3233%2Faic-150687},
+	year = 2015,
+	month = {sep},
+	publisher = {{IOS} Press},
+	volume = {29},
+	number = {1},
+	pages = {77--86},
+	author = {Nicolas B. Ponieman and Carlos Sarraute and Martin Minnoni and Matias Travizano and Pablo Rodriguez Zivic and Alejo Salles},
+	title = {Mobility and sociocultural events in mobile phone data records},
+	journal = {{AI} Communications}
+},
+
+@article{sarraute2015inference,
+ year={2015},
+ journal={Social Network Analysis and Mining},
+ eid={39},
+ volume={5},
+ number={1},
+title={Inference of demographic attributes based on mobile phone usage patterns and social network topology},
+ publisher={Springer Vienna},
+ author={Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Blanc, Pablo},
+}
+
+
+
+@inproceedings{brea2014harnessing,
+ author = {Brea, Jorge and Burroni, Javier and Minnoni, Martin and Sarraute, Carlos},
+ title = {Harnessing Mobile Phone Social Network Topology to Infer Users Demographic Attributes},
+ booktitle = {SNAKDD'14: Proceedings of the 8th Workshop on Social Network Mining and Analysis},
+ year = {2014},
+ pages = {1--9},
+ location = {New York, NY, USA},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+
+@inproceedings{cho2011friendship,
+  title={Friendship and mobility: user movement in location-based social networks},
+  author={Cho, Eunjoon and Myers, Seth A and Leskovec, Jure},
+  booktitle={ACM SIGKDD},
+  pages={1082--1090},
+  year={2011},
+  organization={ACM}
+}
+
+@article{csaji2012exploring,
+  title={Exploring the mobility of mobile phone users},
+  author={Cs{\'a}ji, Bal{\'a}zs Cs and Browet, Arnaud and Traag, VA and Delvenne, Jean-Charles and Huens, Etienne and Van Dooren, Paul and Smoreda, Zbigniew and Blondel, Vincent D},
+  journal={Physica A: Statistical Mechanics and its Applications},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{domenico2012interdependence,
+  title={Interdependence and Predictability of Human Mobility and Social Interactions},
+  author={De Domenico, Manlio and Lima, Antonio and Musolesi, Mirco},
+  journal={Nokia Mobile Data Challenge Workshop},
+  year={2012}
+}
+
+
+@article{gonzalez2008understanding,
+  title={Understanding individual human mobility patterns},
+  author={Gonzalez, Marta C and Hidalgo, Cesar A and Barabasi, Albert-Laszlo},
+  journal={Nature},
+  volume={453},
+  number={7196},
+  pages={779--782},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{isaacman2011identifying,
+  title={Identifying important places in people’s lives from cellular network data},
+  author={Isaacman, Sibren and Becker, Richard and C{\'a}ceres, Ram{\'o}n and Kobourov, Stephen and Martonosi, Margaret and Rowland, James and Varshavsky, Alexander},
+  journal={Pervasive Computing},
+  pages={133--151},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{jiang2012clustering,
+  title={Clustering daily patterns of human activities in the city},
+  author={Jiang, Shan and Ferreira, Joseph and Gonz{\'a}lez, Marta C},
+  journal={Data Mining and Knowledge Discovery},
+  pages={1--33},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{lu2012predictability,
+  title={Predictability of population displacement after the 2010 Haiti earthquake},
+  author={Lu, Xin and Bengtsson, Linus and Holme, Petter},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={109},
+  number={29},
+  pages={11576--11581},
+  year={2012},
+  publisher={National Academy Sciences}
+}
+
+
+@inproceedings{nguyen2012using,
+  title={Using location-based social networks to validate human mobility and relationships models},
+  author={Nguyen, Tommy and Szymanski, Boleslaw K},
+  booktitle={Advances in Social Networks Analysis and Mining (ASONAM), 2012 IEEE/ACM International Conference on},
+  pages={1215--1221},
+  year={2012},
+  organization={IEEE}
+}
+
+
+@article{song2010limits,
+  title={Limits of predictability in human mobility},
+  author={Song, Chaoming and Qu, Zehui and Blumm, Nicholas and Barab{\'a}si, Albert-L{\'a}szl{\'o}},
+  journal={Science},
+  volume={327},
+  number={5968},
+  pages={1018--1021},
+  year={2010},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{song2010modelling,
+  title={Modelling the scaling properties of human mobility},
+  author={Song, Chaoming and Koren, Tal and Wang, Pu and Barab{\'a}si, Albert-L{\'a}szl{\'o}},
+  journal={Nature Physics},
+  volume={6},
+  number={10},
+  pages={818--823},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+
+@inproceedings{wang2011human,
+  title={Human mobility, social ties, and link prediction},
+  author={Wang, Dashun and Pedreschi, Dino and Song, Chaoming and Giannotti, Fosca and Barabasi, Albert-Laszlo},
+  booktitle={Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1100--1108},
+  year={2011},
+  organization={ACM}
+}
+
+@article{wang2012understanding,
+  title={Understanding road usage patterns in urban areas},
+  author={Wang, Pu and Hunter, Timothy and Bayen, Alexandre M and Schechtner, Katja and Gonz{\'a}lez, Marta C},
+  journal={Scientific reports},
+  volume={2},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+
+@booklet{enmodo2010,
+  title={{ENMODO} (2009-2010). {R}esultados de la Encuesta Origen Destino. {M}ovilidad en el Area Metropolitana de {B}uenos {A}ires},
+  author={Secretaría de Transporte. Ministerio del Interior y Transporte.},
+  year={2010}
+}
+
+
+@inproceedings{ponieman2013,
+  title={Human Mobility and Predictability enriched by Social Phenomena Information},
+  author={Nicolás Ponieman and Alejos Salles and Carlos Sarraute},
+  booktitle={IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM)},
+  pages={1331-1336},
+  year={2013},
+  organization={IEEE}
+}
+
+@book{censo2010,
+  author    = "{I}nstituto {N}acional de {E}stadística y {C}ensos ({INDEC})",
+  title     = "{C}enso {N}acional de {P}oblación, {H}ogares y {V}iviendas 2010",
+  publisher = "{INDEC}",
+  volume   = "1",
+  year      = "2010",
+  month    = "October",
+}
+
+@inproceedings{anapolsky2014clatpu,
+  title={Exploración y análisis de datos de telefonía celular para estudiar comportamientos de movilidad en la {C}iudad de {B}uenos {A}ires},
+  author={Anapolsky, Sebasti\'an and Lang, Carolina and Ponieman, Nicol\'as and Sarraute, Carlos},
+  booktitle={{XVIII} {CLATPU}, {C}ongreso {N}acional de {T}ransporte {P}\'ublico y {U}rbano},
+  year={2014}
+}
+
+
 
