--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -1,3 +1,4 @@
+%!TEX root = main.tex
 %===================================================================================================
 %          File: ch1_introduction.tex
 %        Author: Juan de Monasterio
@@ -6,6 +7,8 @@
 %===================================================================================================
 
 \chapter{Introduction}\label{ch:introduction}
+
+\section{Structure of the Thesis}
 
 \todo{Extend intro of all concepts in paper: what are we doing, what is chagas, migrations, CDRs, parasites, epidemics, machine learning, and a comment on what will be done on further chapters.}
 
@@ -27,21 +30,54 @@ by laboratory accidents.
 % \begin{comment}  en el drive estan las ppt del min salud \end{comment}.
 The spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups, and shows that individuals who have not been exposed to the disease vector should also be included in detection campaigns.
 
-Mobile phone records contain information about the movements of large subsets of the population of a country, and make them very useful to understand the spreading dynamics of infectious diseases. They have been used to understand the diffusion of malaria in Kenya~\cite{wesolowski2012quantifying} and in Ivory Coast~\cite{enns2013human}, including the refining of infection models~\cite{chunara2013large}. The cited works on Ivory Coast were performed using the D4D (Data for Development) challenge datasets released in 2013. Tizzoni et al.~\cite{tizzoni2014use} compare different mobility models using theoretical approaches, available census data and models based on CDRs interactions to infer movements. They found that the models based on CDRs and mobility census data are highly correlated, illustrating their use as mobility proxies.
-
-Mobile phone data has also been used to predict the geographic spread and timing of Dengue epidemics~\cite{wesolowski2015impact}. This analysis was performed for the country of Pakistan, which is representative of many countries on the verge of countrywide endemic dengue transmission. Other works directly study CDRs to characterize human mobility and other sociodemographic information. A complete survey of mobile traffic analysis articles may be found in~\cite{naboulsi2015mobile}, which also reviews additional studies based on the Ivory Coast dataset mentioned above.
-
 In this work, we discuss the use of mobile phone records --also known as Call Detail Records (CDRs)-- for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in two Latin American countries. Key health expertise on the subject was provided by the \textit{Mundo Sano} Foundation. We will analyze and use  \textit{Machine Learning} tools for this.
 
-This work will be structured as follows: for the reminaing of this chapter we will give some key aspects of Chagas disease in Argentina and Mexico and introduce shortly the subfield of \textit{Machine Learning}. Chapter 2 will introduce the data used for this problem and show how we constructed national disease risk maps. Chapter 3 will talk about Machine Learning theory, describing methods and algorithms which will be applied to this problem. Chapter 4 will show the results of the models introduced in the chapter before and outline the consequences of this to our problem. Chapter 5 is the final conclusion of this work.
+This thesis is structured as follows: for the remaining of this chapter we will give some key aspects of Chagas disease in Argentina and Mexico and introduce shortly the subfield of \textit{Machine Learning}. 
 
+Chapter 2 will introduce the data used for this problem and show how we constructed national disease risk maps. 
+
+Chapter 3 will talk about Machine Learning theory, describing methods and algorithms which will be applied to this problem. Chapter 4 will show the results of the models introduced in the chapter before and outline the consequences of this to our problem. 
+
+Chapter 5 is the final conclusion of this work.
+
+
+\section{Mobile Phone Records, Mobility and Epidemiology}
+
+The scientific analysis of mobile phone datasets, collected by operators within their network, is a recent field of study, with a corpus of published works starting in 2005, and a noticeable increase of publications from 2012 onwards, as reported in the survey of \cite{naboulsi2015mobile}. Other milestones of this increased interest of the scientific community are the NetMob conferences, focused on mobile phone data analysis (see \cite{netmob}).
+
+Mobile traffic contains information about the movement, interactions, and mobile service consumption of individuals at unprecedented scales.
+This attracted scientists from multiple disciplines: 
+sociologists, epidemiologists, physicists, transportation and telecommunication experts
+found in these datasets a clear opportunity to bring their analyses to an unprecedented scale while retaining a high level of detail on each individual.
+
+Thanks to the growing availability of datasets, collaborations between academic research groups and network operators based on the analysis of real-world mobile traffic have been flourishing. A significant example is the Data for Development Challenges by Orange (\cite{d4d}).
+
+One of the main research subject is mobility analysis. 
+Call locations (recorded through cell tower usages) are a projection of users trajectories, 
+showing a strong regularity in their movement patterns,
+both in space and time, as described in \cite{gonzalez2008understanding}.
+In another study, \cite{song2010limits} explore the limits of predictability in human dynamics by studying the mobility patterns of anonymized mobile phone users. 
+By measuring the entropy of individuals trajectories, the authors found a 93\% potential predictability in user mobility across the whole user base.
+
+Human mobility is also influenced by social components: \cite{cho2011friendship} observe that social relationships
+can explain about 10\% to 30\% of all human movement, while periodic
+behavior explains 50\% to 70\%; whereas \cite{ponieman2016mobility} show how social ties can be used to improve mobility predictions, in the case of attendance to large social events.
+
+Mobility analysis has applications in diverse areas such as urban planning (see \cite{wang2012understanding})  and disaster recovery (see \cite{lu2012predictability}).
+In particular, mobile phone records contain information about the movements of large subsets of the population of a country, and make them very useful to understand the spreading dynamics of infectious diseases, while preserving the privacy of users. 
+
+They have been used to understand the diffusion of malaria in Kenya by \cite{wesolowski2012quantifying} and in Ivory Coast by \cite{enns2013human}, including the refining of infection models performed by \cite{chunara2013large}. The cited works on Ivory Coast were performed using the Data for Development (\cite{d4d}) challenge datasets released in 2013. \cite{tizzoni2014use} compare different mobility models using theoretical approaches, available census data and models based on CDRs interactions to infer movements. They found that the models based on CDRs and mobility census data are highly correlated, illustrating their use as mobility proxies.
+
+Mobile phone data has also been used to predict the geographic spread and timing of Dengue epidemics by \cite{wesolowski2015impact}. This analysis was performed for the country of Pakistan, which is representative of many countries on the verge of countrywide endemic dengue transmission. Other works directly study CDRs to characterize human mobility and other sociodemographic information. A complete survey of mobile traffic analysis articles may be found in \cite{naboulsi2015mobile}, which also reviews additional studies based on the Ivory Coast dataset mentioned above.
+
+ 
 \todo{add more references to what is out of scope in this work}
 
-\section{Brief overview of machine learning}
+\section{Brief Introduction to Machine Learning}
 
-Machine learning is a subfield of computer science with broad \textit{theoretical} intersections with statistics and mathematical optimization. At present time it has a wide range of applications. A non-comprehensive list of its use includes self-driving cars, spam detection systems, face and/or voice recognition, temperature prediction in weather, AI opponents in games, disease prediction in patients, text and audio language translation, stock pricing, movie recommendation systems, etc. Examples of these machine learning programs are now widespread to the point where their use today has a direct impact on the lives of millions of people. Due to this, machine learning has \textit{practical} intersections with data and software engineering.
+Machine learning is a subfield of computer science with broad \textit{theoretical} intersections with statistics and mathematical optimization. At the present time, it has a wide range of applications. A non-comprehensive list of its use includes self-driving cars, spam detection systems, face recognition, voice recognition, temperature prediction in weather, AI opponents in games, disease prediction in patients, text and audio language translation, stock pricing, movie recommendation systems, etc. Examples of these machine learning programs are now widespread to the point where their use today has a direct impact on the lives of millions of people. Due to this, machine learning has \textit{practical} intersections with data and software engineering.
 
-``A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E''~\cite{Mitchell-MLearning}. To our purpose it is clear though that this definition\footnote{Other authors might reference machine learning as \textit{statistical learning}. See~\cite{hastie-elemstatslearn} as an example.} is not formally well-defined. Yet it serves to convey the idea of algorithms that automatically \textit{learns} to do a specific task better over time and with more data. Note that the ``goodness'' of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this, the concept of \textit{learning} within this context is less associated with the cognitive definition and is related to an optimization based approach.
+``A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E'' (definition given by \cite{Mitchell-MLearning}). For our purposes it is clear though that this definition\footnote{Other authors might reference machine learning as \textit{statistical learning}. See~\cite{hastie-elemstatslearn} as an example.} is not formally well-defined. However it serves to convey the idea of algorithms that automatically \textit{learn} to do a specific task better over time and with more data. Note that the ``goodness'' of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this, the concept of \textit{learning} within this context is less associated with the cognitive definition and is related to an optimization based approach.
 
  In this work we generate predictions of population movements between different regions, providing a proxy for the epidemic spread. Our objective is to show that geolocalized call records are rich in social and individual information, which can be used to determine whether an individual has lived in an epidemic area. We present two case studies, in Argentina and in Mexico, using data provided by mobile phone companies from each country. %A discussion of how mobile data was processed is included.
 This is the first work that leverages mobile phone data to better understand the diffusion of the Chagas disease.
@@ -49,19 +85,13 @@ This is the first work that leverages mobile phone data to better understand the
 
 
 
-\section{Facts on Chagas Disease}
+\section{Key Facts on Chagas Disease}
 
-\subsection{Chagas in  Argentina}\label{endemic_zone_argentina}
+\subsection{Chagas Disease in  Argentina}\label{endemic_zone_argentina}
 
-For more than 50 years, vector control campaigns have been underway in Argentina as the main epidemic counter-measure. The \textit{Gran Chaco}, situated in the northern part of the country is home to the disease-carrying triatomines. This region is hyperendemic for the disease~\cite{OPS2014mapa}. A map of this ecoregion is shown in Figure~\cref{fig:granchaco}.
+For more than 50 years, vector control campaigns have been underway in Argentina as the main epidemic counter-measure. The \textit{Gran Chaco}, situated in the northern part of the country is home to the disease-carrying triatomines. This region is hyperendemic for the disease~\cite{OPS2014mapa}. A map of this ecoregion is shown in \cref{fig:granchaco}.
 
-The ecoregion's low socio-demographic conditions further support the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas.
-% The ecoregion as of today is hyperendemic for the disease.
-This region is considered as the endemic zone $E_Z$ in the analysis described in \cref{ch:machineLearning} and \cref{ch:descr-risk}.
-
-\todo{add more references to examples of CDRs and chagas or other diseases}
-
-\begin{figure}[h!]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=0.75\columnwidth]{figures/Ambientes_GranChaco_TNC-Argentina/Ambientes_GranChaco_TNC-Argentina.png}
 \caption{The \textit{Gran Chaco} ecoregion in South America.%
@@ -69,6 +99,13 @@ This region is considered as the endemic zone $E_Z$ in the analysis described in
 % \end{center}
 \label{fig:granchaco}
 \end{figure}
+
+The ecoregion's low socio-demographic conditions further support the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas.
+% The ecoregion as of today is hyperendemic for the disease.
+This region is considered as the endemic zone $E_Z$ in the analysis described in \cref{ch:descr-risk} and \cref{ch:machineLearning}.
+
+\todo{add more references to examples of CDRs and chagas or other diseases}
+
 
 
 The dynamic interaction of the triatomine infested areas and the human mobility patterns create a difficult scenario to track down individuals or spots with high prevalence of infected people or transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. %The work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas epidemic spatial structure. AS: WE ALREADY SAID THIS.
@@ -80,20 +117,20 @@ In Argentina, less than 1\% of infected people are diagnosed and treated
 Even though governmental programs have been ongoing for years now~\cite{plan_nacional_chagas}, data on the issue is scarce or hardly accessible. This presents a real obstacle to ongoing research and coordination efforts to tackle the disease in the region.
 
 
-\subsection{Chagas in  Mexico}\label{endemic_zone_mexico}
+\subsection{Chagas Disease in  Mexico}\label{endemic_zone_mexico}
 
 
-\begin{figure}[h!]
+
+In 2004, the joint work of \textit{Instituto Nacional de Cardiología ``Ignacio Chávez''} and  \textit{Instituto de Biología de la UNAM} resulted in a Chagas disease database for Mexico~\cite{cruz2006chagmex}. Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease. Based on this data, we defined the Mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide. The resulting risk region is shown in \cref{fig:endemic_zone_mexico}. It covers most of the South region of the country and includes the states of Jalisco, Oaxaca, Veracruz, Guerrero, Morelos, Puebla, Hidalgo and Tabasco.
+This region is considered as the endemic zone $E_Z$ for the Mexican case in the analysis described in~\cref{ch:descr-risk} and \cref{ch:results_conclusion}.
+
+\begin{figure}[ht]
 \centering
 \includegraphics[width=0.75\linewidth]
 {figures/Ambientes_Gran_Chaco-Mexico1/Ambientes_Gran_Chaco-Mexico1.png}
 \caption{Endemic region $E_Z$ for Mexico.}
 \label{fig:endemic_zone_mexico}
 \end{figure}
-
-In 2004, the joint work of \textit{Instituto Nacional de Cardiología ``Ignacio Chávez''} and  \textit{Instituto de Biología de la UNAM} resulted in a Chagas disease database for Mexico~\cite{cruz2006chagmex}. Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease. Based on this data, we defined the Mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide. The resulting risk region is shown in Figure~\cref{fig:endemic_zone_mexico}. It covers most of the South region of the country and includes the states of Jalisco, Oaxaca, Veracruz, Guerrero, Morelos, Puebla, Hidalgo and Tabasco.
-This region is considered as the endemic zone $E_Z$ for the Mexican case in the analysis described in~\cref{ch:descr-risk} and \cref{ch:results_conclusion}.
-
 
 
 The authors of~\cite{carabarin2013chagas} provide an extensive review of the
