--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,24 @@
+@inproceedings{sarraute2015descubriendo,
+	year = 2015,
+	month = {Aug},
+	author = {Carlos Sarraute and Carolina Lang and Juan de Monasterio and Diego Weinberg},
+	title = {Descubriendo {{C}}hagas con Big Data},
+	booktitle = {XVII Simposio Internacional sobre Enfermedades Desatendidas},
+ 	location = {Buenos Aires, Argentina},
+},
+	
+
+@inproceedings{deMonasterio2016analyzing,
+	doi = {10.1109/asonam.2016.7752298},
+	url = {https://doi.org/10.1109%2Fasonam.2016.7752298},
+	year = 2016,
+	month = {aug},
+	publisher = {{IEEE}},
+	author = {Juan de Monasterio and Alejo Salles and Carolina Lang and Diego Weinberg and Martin Minnoni and Matias Travizano and Carlos Sarraute},
+	title = {Analyzing the spread of {{C}}hagas disease with mobile phone data},
+	booktitle = {2016 {IEEE}/{ACM} International Conference on Advances in Social Networks Analysis and Mining ({ASONAM})}},
+	
+
 % machine learning citations
 
 @book{hastie-elemstatslearn,
@@ -601,15 +622,6 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 }
 
 
-@inproceedings{sarraute2015descubriendo,
-	year = 2015,
-	month = {Aug},
-	author = {Carlos Sarraute and Carolina Lang and Juan de Monasterio and Diego Weinberg},
-	title = {Descubriendo {{C}}hagas con Big Data},
-	booktitle = {XVII Simposio Internacional sobre Enfermedades Desatendidas},
- 	location = {Buenos Aires, Argentina},
-},
-	
 
 @article{Ponieman2015mobility,
 	doi = {10.3233/aic-150687},
